syntax = "proto3";

package hello;

service HelloService {
    rpc FindOne (HelloById) returns (Hello) {}
    rpc FindAll (HelloListRequest) returns (HelloList) {}

    rpc AddOne (Hello) returns (Hello) {}
}

message HelloById {
    int32 id = 1;
}

message HelloListRequest {

}

message Hello {
    int32 id = 1;
    string message = 2;
}

message HelloList {
    repeated Hello messages = 1;
}